--- a/public/admin.html
+++ b/public/admin.html
@@ -341,7 +341,7 @@ let mydatas = {};
       "Topographie":topo
   };
     
-    const map = L.map('map').setView([45.15527152851981, 4.135155468240912], 13);
+    const map = L.map('mapA').setView([45.15527152851981, 4.135155468240912], 13);
     L.control.layers(baseMaps, null, {position:'bottomleft'}).addTo(map);
     osm.addTo(map);
     </script>
