--- a/public/admin.html
+++ b/public/admin.html
@@ -62,7 +62,7 @@
        #panel {
         width:20%;
         height:100%;
-        background:blue;
+        background:grey;
       }
       #mapA {
         height:100%;
