--- a/public/admin.html
+++ b/public/admin.html
@@ -345,7 +345,9 @@ let mydatas = {};
     const map = L.map('mapA').setView([45.72191877191547, 4.227417998761897], 15);
     L.control.layers(baseMaps, null, {position:'bottomleft'}).addTo(map);
     osm.addTo(map);
+      setTimeout(() => {
       map.invalidateSize();
+      }, 300);
     </script>
   </body>
 </html>
