--- a/public/admin.html
+++ b/public/admin.html
@@ -36,7 +36,7 @@
    </div>
    </div>
 
-    <div style="display:none" id="map">
+    <div id="map">
       <div id="panel"></div>
       <div id="view">
         <div id="mapA">
@@ -44,7 +44,7 @@
         </div>
       </div>
     </div>
-    <div id="admin"></div>
+    <div style="display:none" id="admin"></div>
     <style>
       #map {
         position:fixed;
