--- a/public/admin.html
+++ b/public/admin.html
@@ -70,6 +70,11 @@
         margin:0;
         padding:0;
       }
+
+       .leaflet-control-layers {
+      z-index:1001;
+    }
+      
       body {
           margin: 0;
           padding:1rem;
