--- a/public/admin.html
+++ b/public/admin.html
@@ -44,7 +44,9 @@
         </div>
       </div>
     </div>
-    <div style="display:none" id="admin"></div>
+    <div style="display:none" id="admin">
+      <div id="selecter"></div>
+    </div>
     <style>
       #map {
         position:fixed;
@@ -53,6 +55,19 @@
         width:100vw;
         display:flex;
         flex-direction:row;
+      }
+      #admin {
+        position:fixed;
+        top:10vh;
+        height:90vh;
+        width:100vw;
+        display:flex;
+        flex-direction:row;
+      }
+      #selecter {
+        width:100%;
+        height:20%;
+        background:blue;
       }
       #view {
         width:80%;
