--- a/public/admin.html
+++ b/public/admin.html
@@ -66,8 +66,8 @@
       }
       #selecter {
         width:100%;
-        height:20%;
-        background:blue;
+        height:10%;
+        background:linear-gradient(90deg, black, grey);
       }
       #view {
         width:80%;
