--- a/public/admin.html
+++ b/public/admin.html
@@ -45,7 +45,11 @@
       </div>
     </div>
     <div style="display:none" id="admin">
-      <div id="selecter"></div>
+      <div id="selecter">
+        <button id="btnBennes">Bennes</button>
+        <button id="btnBennes">Comptes</button>
+        <button id="btnBennes">Clients</button>
+      </div>
     </div>
     <style>
       #map {
