--- a/public/admin.html
+++ b/public/admin.html
@@ -72,6 +72,8 @@
         width:100%;
         height:5%;
         background:linear-gradient(90deg, black, grey);
+        align-items:center; /* We center everything in height */
+        justify-content:space-between; /* Distribue l'espace horizontalement */
       }
       #view {
         width:80%;
