--- a/public/admin.html
+++ b/public/admin.html
@@ -74,6 +74,7 @@
         background:linear-gradient(90deg, black, grey);
         align-items:center; /* We center everything in height */
         justify-content:space-between; /* Distribue l'espace horizontalement */
+        display:flex;
       }
       #view {
         width:80%;
