--- a/public/admin.html
+++ b/public/admin.html
@@ -75,6 +75,8 @@
         align-items:center; /* We center everything in height */
         justify-content:space-between; /* Distribue l'espace horizontalement */
         display:flex;
+        padding: 0 1rem;
+        box-sizing: border-box;
       }
       #view {
         width:80%;
