--- a/public/admin.html
+++ b/public/admin.html
@@ -46,10 +46,13 @@
     </div>
     <div style="display:none" id="admin">
       <div id="selecter">
-        <button id="btnBennes">Bennes</button>
-        <button id="btnBennes">Comptes</button>
-        <button id="btnBennes">Clients</button>
+        <button onclick="document.getElementById('bennesSearch').style.display='flex';document.getElementById('comptesSearch').style.display='none';document.getElementById('clientsSearch').style.display='none';" id="btnBennes">Bennes</button>
+        <button onclick="document.getElementById('bennesSearch').style.display='none';document.getElementById('comptesSearch').style.display='flex';document.getElementById('clientsSearch').style.display='none';" id="btnBennes">Comptes</button>
+        <button onclick="document.getElementById('bennesSearch').style.display='none';document.getElementById('comptesSearch').style.display='none';document.getElementById('clientsSearch').style.display='flex';" id="btnBennes">Clients</button>
       </div>
+      <div id="bennesSearch"></div>
+      <div style="display:none" id="comptesSearch"></div>
+      <div style="display:none" id="clientsSearch"></div>
     </div>
     <style>
       #map {
