--- a/public/admin.html
+++ b/public/admin.html
@@ -67,6 +67,13 @@
       </div>
     </div>
     <style>
+      .scroll-container {
+        height:100%;
+        width:100%;
+        overflow-y:auto;
+        overflox-x:auto;
+        padding:1vw;
+      }
       #map {
         position:fixed;
         top:10vh;
