--- a/public/admin.html
+++ b/public/admin.html
@@ -73,6 +73,7 @@
         overflow-y:auto;
         overflox-x:auto;
         padding:1vw;
+        background:grey;
       }
       #map {
         position:fixed;
