--- a/public/admin.html
+++ b/public/admin.html
@@ -89,7 +89,11 @@
         height:90vh;
         width:100vw;
         display:flex;
-        flex-direction:row;
+        flex-direction:column;
+      }
+      #bennesSearch, #comptesSearch, #clientsSearch {
+        top:15vh;
+        height:85vh;
       }
       #selecter {
         width:100%;
