--- a/public/admin.html
+++ b/public/admin.html
@@ -425,6 +425,14 @@ let mydatas = {};
         bennesContainer.innerHTML = "";
         const line = document.createElement('div');
         line.classList.add('line');
+        for (const ben of filtered) {
+          const num = document.createElement('h1');
+          num.textContent = ben.id;
+          line.append(num);
+          const add = document.createElement('p');
+          add.textContent = ben.adresse;
+          line.append(add);
+        }
         bennesContainer.append(line);
       }
 
