--- a/public/admin.html
+++ b/public/admin.html
@@ -371,6 +371,8 @@ let mydatas = {};
         display:flex;
         flex-direction:row;
         background-color:white;
+        border: 1vh solid black,
+        margin-top:1vh;
       }
     </style>
      <script>
