--- a/public/admin.html
+++ b/public/admin.html
@@ -367,12 +367,13 @@ let mydatas = {};
       }
       .line {
         width:100%;
-        height:5vh;
+        height:10vh;
         display:flex;
         flex-direction:row;
-        background-color:white;
+        background:linear-gradient(135, white, blue);
         border: 1vh solid black,
         margin-top:1vh;
+        align-items:center;
       }
     </style>
      <script>
