--- a/public/admin.html
+++ b/public/admin.html
@@ -371,7 +371,7 @@ let mydatas = {};
         display:flex;
         flex-direction:row;
         background:linear-gradient(135, white, blue);
-        border: 1vh solid black,
+        border: 1vh solid black;
         margin-top:1vh;
         align-items:center;
       }
