--- a/public/admin.html
+++ b/public/admin.html
@@ -441,6 +441,9 @@ let mydatas = {};
           const num = document.createElement('h1');
           num.textContent = ben.id;
           line.append(num);
+          const status = document.createElement('select');
+          status.textContent = ben.statut;
+          line.append(status);
           const add = document.createElement('p');
           add.textContent = ben.adresse;
           line.append(add);
