--- a/public/admin.html
+++ b/public/admin.html
@@ -370,7 +370,7 @@ let mydatas = {};
         height:10vh;
         display:flex;
         flex-direction:row;
-        background:linear-gradient(135, white, blue);
+        background:linear-gradient(135deg, white, blue);
         border: 1vh solid black;
         margin-top:1vh;
         align-items:center;
