--- a/public/admin.html
+++ b/public/admin.html
@@ -445,7 +445,7 @@ let mydatas = {};
           status.textContent = ben.statut;
           line.append(status);
           const add = document.createElement('p');
-          add.textContent = ben.adresse;
+          add.textContent = short(ben.adresse);
           line.append(add);
           bennesContainer.append(line);
         }
@@ -456,6 +456,10 @@ let mydatas = {};
         console.log("Avant :", what);
         const query = filtre.toLowerCase();
         return what.filter(obj => Object.values(obj).some(val => String(val).toLowerCase().startsWith(query)));
+      }
+
+      function short(str) {
+      return str.slice(0, 20);
       }
     </script>
   </body>
