--- a/public/admin.html
+++ b/public/admin.html
@@ -374,6 +374,7 @@ let mydatas = {};
         border: 1vh solid black;
         margin-top:1vh;
         align-items:center;
+        justify-content: space-between;
       }
     </style>
      <script>
