--- a/public/admin.html
+++ b/public/admin.html
@@ -444,8 +444,8 @@ let mydatas = {};
           num.textContent = ben.id;
           line.append(num);
           const status = document.createElement('p');
-          status.textContent = toread(ben.statut);
-          status.style.backgroundColor = tocolor(ben.statut);
+          status.textContent = toread(ben.status);
+          status.style.backgroundColor = tocolor(ben.status);
           line.append(status);
           const notes = document.createElement('p');
           notes.textContent = short(ben.notes);
