--- a/public/admin.html
+++ b/public/admin.html
@@ -453,7 +453,7 @@ let mydatas = {};
        const lightbox = document.getElementById('lightboxB');
        const closeBtn = document.getElementById('close-btnB');
       console.log("LIGHTBOX");
-       profilePic.addEventListener('click', () => {
+      line.addEventListener('click', () => {
          lightbox.style.display = 'flex';
          document.getElementById('lightH2B').textContent = ben.id;
          document.getElementById('lightPB').textContent =  ben.pds + " | " + ben.adresse;
