--- a/public/admin.html
+++ b/public/admin.html
@@ -32,7 +32,7 @@
      <div id="heure"><p id="time">N/A</p></div>
      <div id="portal"><p>Portail Administration</p></div>
        <button onclick="document.getElementById('map').style.display='flex';document.getElementById('admin').style.display='none';" id="visuBtn">Voir la carte</button>
-       <button onclick="document.getElementById('map').style.display='none';document.getElementById('admin').style.display='flex'; putBennes('no');" id="adminBtn">Administration</button>
+       <button onclick="document.getElementById('map').style.display='none';document.getElementById('admin').style.display='flex';" id="adminBtn">Administration</button>
      <div id="logo_eurea">
        <img src="https://res.cloudinary.com/devee5rfe/image/upload/v1754320567/OIP_lz4npc.jpg" onclick="window.location.href = 'https://www.groupe-eurea.com/';" alt="Logo Euréa">
        </div>
