--- a/public/admin.html
+++ b/public/admin.html
@@ -456,7 +456,7 @@ let mydatas = {};
       line.addEventListener('click', () => {
          lightbox.style.display = 'flex';
          document.getElementById('lightH2B').textContent = ben.id;
-         document.getElementById('lightPB').textContent =  ben.pds + " | " + ben.adresse;
+         document.getElementById('lightPB').textContent =  ben.volume + " T | " + ben.adresse;
        });
         closeBtn.addEventListener('click', () => {
          lightbox.style.display = 'none';
