--- a/public/admin.html
+++ b/public/admin.html
@@ -108,6 +108,7 @@
       #bennesSearch, #comptesSearch, #clientsSearch {
         top:15vh;
         height:85vh;
+        flex-direction:row;
       }
       #selecter, #searcherBenne {
         width:100%;
