--- a/public/admin.html
+++ b/public/admin.html
@@ -335,7 +335,7 @@ const offset = -((new Date().getTimezoneOffset()) / 60);
           document.getElementById('time').textContent = mes.value;
         }
            if (mes.action === 'benstatus') {
-          if (mes.who === sessionStorage.getItem('session_id');) {
+          if (mes.who === sessionStorage.getItem('session_id')) {
             document.getElementById('benne_progress').value = mes.value;
           }
         }
