--- a/public/admin.html
+++ b/public/admin.html
@@ -112,7 +112,7 @@
       #bennesSearch, #comptesSearch, #clientsSearch {
         top:15vh;
         height:85vh;
-        flex-direction:row;
+        flex-direction:column;
       }
       #selecter, #searcherBenne {
         width:100%;
