--- a/public/admin.html
+++ b/public/admin.html
@@ -336,6 +336,7 @@ const offset = -((new Date().getTimezoneOffset()) / 60);
         }
            if (mes.action === 'benstatus') {
           if (mes.who === sessionStorage.getItem('session_id')) {
+            console.log(parseInt(mes.value)*100);
             document.getElementById('benne_progress').value = parseInt(mes.value)*100;
           }
         }
