--- a/public/admin.html
+++ b/public/admin.html
@@ -61,6 +61,7 @@
       <div id="bennesSearch">
               <div id="searcherBenne">
                 <input class='input_search' type="text" id="text_searcherBenne" placeholder="Recherchez une benne ici...">
+                <p>A : posée B : prête C : en dépôt</p>
                 <button onclick="putBennes(document.getElementById('text_searcherBenne').value);">Filtrer</button>
                 <button onclick="putBennes('no'); document.getElementById('text_searcherBenne').value = '';">Réinitialiser</button>
                 <progress id="benne_progress" value="0" max="100"></progress>
@@ -537,7 +538,7 @@ let mydatas = {};
           return 'prête';
         }
          if (statut == "C") {
-          return 'stand_by';
+          return 'en dépôt';
         }
       }
     </script>
