--- a/public/admin.html
+++ b/public/admin.html
@@ -26,6 +26,7 @@
         <h2 id="lightH2B"></h2>
         <p id="lightPB"></p>
         <button onclick="">Éditer</button>
+        <button onclick="">Supprimer</button>
       </div>
     </div>
    <div class="head" id="head">
