--- a/public/admin.html
+++ b/public/admin.html
@@ -112,7 +112,7 @@
         flex-direction:column;
       }
       .input_search {
-        height:4vh;
+        height:2vh;
         width:25vh;
       }
       #bennesSearch, #comptesSearch, #clientsSearch {
@@ -176,7 +176,7 @@
       input {
         width: 100%;
         padding: 0.75rem;
-        margin-bottom: 1rem;
+       /* margin-bottom: 1rem; */
         border: 1px solid #ccc;
         border-radius: 0.5rem;
         font-size: 1rem;
