--- a/public/admin.html
+++ b/public/admin.html
@@ -70,8 +70,8 @@
           <div id="bennesContent"></div> <!-- C'est ici qu'on va insérer les bennes. Il faut savoir qu'on doit récupérer les bennes sous forme de liste, les insérer et quand on fait une recherche, on refait le protocole d'insertion sans le filtre-->
         </div>
         <form id="createBenne">
-          <input type="text" name="num" placeholder="N° de la Benne">
-          <input type="text" name="volume" placeholder="Capacité (T)">
+          <input class="input_search" type="text" name="num" placeholder="N° de la Benne">
+          <input class="input_search" type="text" name="volume" placeholder="Capacité (T)">
           <button type="submit">Créer une benne</button>
         </form>
       </div>
