--- a/public/admin.html
+++ b/public/admin.html
@@ -71,7 +71,7 @@
         </div>
         <form id="createBenne">
           <input class="input_search" type="text" name="num" placeholder="N° de la Benne">
-          <input class="input_search" type="text" name="volume" placeholder="Capacité (T)">
+          <input class="input_search" type="number" name="volume" placeholder="Capacité (T)">
           <button type="submit">Créer une benne</button>
         </form>
       </div>
