--- a/public/admin.html
+++ b/public/admin.html
@@ -26,7 +26,7 @@
         <h2 id="lightH2B"></h2>
         <p id="lightPB"></p>
         <button onclick="">Éditer</button>
-        <button onclick="">Supprimer</button>
+        <button onclick="deleteBenne(numon)">Supprimer</button>
       </div>
     </div>
    <div class="head" id="head">
@@ -480,6 +480,8 @@ let mydatas = {};
          lightbox.style.display = 'flex';
          document.getElementById('lightH2B').textContent = "Benne n°" + ben.id;
          document.getElementById('lightPB').textContent =  ben.volume + " T";
+        numon = ben.id;
+        console.log(numon);
        });
         closeBtn.addEventListener('click', () => {
          lightbox.style.display = 'none';
@@ -547,7 +549,7 @@ let mydatas = {};
         }
       }
 
- 
+ let numon;
       document.getElementById('createBenne').addEventListener('submit', async (e) => {
         e.preventDefault();
         const formData = new FormData(e.target);
@@ -559,6 +561,14 @@ let mydatas = {};
         const fromServer = await fetcher('createbenne', content, 'POST', sessionStorage.getItem('session_id'));
         putBennes('no');
       });
+
+      async function deleteBenne(num) {
+        const content = {
+          num:num
+        };
+        const fromServer = await fetcher('deletebenne', content, 'POST', sessionStorage.getItem('session_id'));
+        putBennes('no');
+      }
     </script>
   </body>
 </html>
