--- a/public/admin.html
+++ b/public/admin.html
@@ -29,7 +29,7 @@
           <div class="w3-center">
           <i>Sélectionnez un paramètre puis modifiez-le...</i>
             <select id="modifierSelecter"></select>
-            <input type="text" name="valueSelecter">
+            <input id="inpSelecter" type="text" name="valueSelecter">
             <button>Enregistrer</button>
           </div>
         </div>
@@ -480,7 +480,7 @@ let mydatas = {};
           const line = document.createElement('div');
           line.classList.add('line');
           line.id = `B${ben.id}`;
-
+benDatas[ben.id] = ben;
        const lightbox = document.getElementById('lightboxB');
        const closeBtn = document.getElementById('close-btnB');
       console.log("LIGHTBOX");
@@ -488,20 +488,6 @@ let mydatas = {};
          lightbox.style.display = 'flex';
          document.getElementById('lightH2B').textContent = "Benne n°" + ben.id;
          document.getElementById('lightPB').textContent =  ben.volume + " T";
-        const selecter = document.getElementById('modifierSelecter');
-        const selecterInput = {
-        "volume",
-        "notes",
-        "latitude",
-        "longitude",
-        "status"
-        };
-        for (const item of selecterInput) {
-          const option = document.createElement('option');
-          option.value = item;
-          option.text = item;
-          selecterInput.append(option);
-        }
         numon = ben.id;
         console.log(numon);
        });
@@ -594,6 +580,28 @@ let mydatas = {};
         putBennes('no');
           }}
       }
+
+const benDatas = {};
+      
+      const selecter = document.getElementById('modifierSelecter');
+        const selecterInput = {
+        "volume",
+        "notes",
+        "latitude",
+        "longitude",
+        "status"
+        };
+        for (const item of selecterInput) {
+          const option = document.createElement('option');
+          option.value = item;
+          option.text = item;
+          selecterInput.append(option);
+        }
+        selecter.addEventListener('change', () => {
+          console.log(benDatas);
+          const value = event.target.value;
+          document.getElementById('inpSelecter').value = benDatas[numon][value];
+        });
     </script>
   </body>
 </html>
