--- a/public/admin.html
+++ b/public/admin.html
@@ -492,6 +492,7 @@ benDatas[ben.id] = ben;
         console.log(numon);
         document.getElementById('editeurLightBenne').style.display == 'none';
         selecter.selectedIndex = 0;
+         document.getElementById('inpSelecter').value = "";
        });
         closeBtn.addEventListener('click', () => {
          lightbox.style.display = 'none';
